--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,8 @@
   },
   "author": "Divya Arora",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "medicare-booking": "file:"
+  }
 }
