--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "medicare-booking": "file:"
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "medicare-booking": "file:",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3"
   }
 }
