Add MongoDB connection URL to .env file

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 PORT=5000
+MONGO_URL=mongodb+srv://divyaarora:mernstackmedicare@5@cluster0.pz2tq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
