--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URL=mongodb+srv://divyaarora:mernstackmedicare@5@cluster0.pz2tq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://divyaarora:divyaarora@cluster0.pz2tq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
