--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URL=mongodb+srv://divyaarora:divyaarora@cluster0.pz2tq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET_key=
