--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,5 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "start-dev": "nodemon index.js"
-  },
-  "author": "Divya Arora",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "backend": "file:",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.11.0",
-    "mongoose": "^8.8.3",
-    "nodemon": "^3.1.7"
+    "crypto-js": "^4.2.0"
   }
 }
