--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "medicare-booking",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "start-dev": "start"
+  },
+  "author": "Divya Arora",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
@@ -6,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "medicare-booking": "file:",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3"
   }
